--- a/lab1/rand.html
+++ b/lab1/rand.html
@@ -8,10 +8,17 @@
 </head>
 <body>
     <h1>Random Number Generator</h1>
-    <input type="number" id="seed" placeholder="Seed">  
-    <button onclick="random_vonneumann(document.querySelector('#random'), document.querySelector('#seed').value, 10)">Generate Random Numbers with von Neumann's method</button><br>
-    <button onclick="random_lehmer(document.querySelector('#random'))">Generate Random Numbers with Lehmer's method</button><br>
-    <button onclick="random_lehmer_gr(document.querySelector('#random'))">Generate Random Numbers with Lehmer's method</button><br>
+    <h4>VonNeumann's method</h4>
+    <input type="number" value="1211" id="seed" placeholder="Seed">  
+    <input type="number" value="10" id="iterations" placeholder="Iterations"><br>
+    <button onclick="random_vonneumann(document.querySelector('#random'), document.querySelector('#seed').value, document.querySelector('#iterations').value)">Generate</button><br>
+    <h4>Lehmer's method</h4>
+    <input type="number" value="121" id="module" placeholder="Module">
+    <input type="number" value="62345" id="multiplier" placeholder="Multiplier">
+    <input type="number" value=".2" id="seed_l" placeholder="Seed"><br>
+    <button onclick="random_lehmer(document.querySelector('#random'), document.querySelector('#module').value, document.querySelector('#multiplier').value, document.querySelector('#seed_l').value)">Generate data</button>
+    <button onclick="random_lehmer_gr(document.querySelector('#random'), document.querySelector('#module').value, document.querySelector('#multiplier').value, document.querySelector('#seed_l').value)">Generate plot</button><br>
+    <h4>Pi approximation</h4>
     <button onclick="pi_montecarlo(1000, document.querySelector('#random'))">Generate Pi</button>
     <div id="random" style="position: relative;width: 100%;color: darkgrey;"></div>
 </body>
