--- a/lab1/rand.html
+++ b/lab1/rand.html
@@ -27,7 +27,7 @@
         </fieldset>
         <fieldset>
             <legend>Monte Carlo methhod</legend>
-            <input type="number" step="1000" value="1000" id="points" placeholder="Points">
+            <input type="number" step="1000" value="1000" id="points" placeholder="Points"><br>
             <button onclick="pi_montecarlo(document.querySelector('#points').value, document.querySelector('#random'))">Generate Pi</button>
         </fieldset>
 </div>
