--- a/Projekt/DiscreteEventSimulation.html
+++ b/Projekt/DiscreteEventSimulation.html
@@ -26,7 +26,7 @@
 <script>
     if (new URLSearchParams(window.location.search).get('sims')) {
         const sims = document.querySelector('#sims').value = parseInt(new URLSearchParams(window.location.search).get('sims'));
-        const { bestSimulation, worstSimulation, simulationSuccessRate } = simulateMultiple(sims);
+        const { bestSimulation, worstSimulation, simulationSuccessRate } = simulateMultipleDiscreteEvents(sims);
         document.querySelector('#results').innerHTML = `Success Rate: ${(simulationSuccessRate / sims * 100).toFixed(2)}% (<span style="color:green;">${simulationSuccessRate}</span> successful, <span style="color:red;">${sims - simulationSuccessRate}</span> unsuccessful)`;
         // Display capital data on the chart
         const ctx = document.getElementById('capitalChart').getContext('2d');
